sea-query-derive/tests/compile-fail/enum_def/tuple_struct.rs
use sea_query_derive::enum_def;

#[enum_def]
struct Hello(String);

fn main() {}
